# convergence

./: .gitignore  CMakeLists.txt  README.md
data/: iterate.frag  iterate_frag.glsl
src/: CMakeLists.txt  application.cpp  application.hpp  application_window.cpp  application_window.hpp  glfw_instance.cpp  glfw_instance.hpp  glfw_window.cpp  glfw_window.hpp  input_window.cpp  input_window.hpp  main.cpp  main_window.cpp  main_window.hpp  message_box.cpp  message_box.hpp  mouse_drag.cpp  mouse_drag.hpp  resource_locator.cpp  resource_locator.hpp  stream_capture.cpp  stream_capture.hpp
src/shaders/: iterate_frag.glsl
